syntax = "proto2";
package fk.prof.idl;

import "recorder.proto";
import "entities.proto";
import "work_entities.proto";

message BackendAssociation {
    required AssignedBackend backend = 1;
    repeated ProcessGroup processGroups = 2;
}

message BackendAssociations {
    repeated BackendAssociation associations = 1;
}

message LeaderDetail {
    required string host = 1;
    required uint32 port = 2;
}

message LoadReportRequest {
    required string ip = 1;
    required uint32 port = 2;
    required float load = 3;
    required int64 curr_tick = 4;
}

message RecordingPolicy {
    required uint32 duration = 1;
    required uint32 coverage_pct = 2;
    repeated Work work = 3;
    required string description = 4;
    optional uint32 min_healthy = 5;
}